# reporting

./: .gitignore  Dockerfile  MANIFEST.in  config.yaml  fortis_spec.csv  generate_text_and_excel_report.py  good_dicom.dcm  parse_cxr_fortis.ipynb  parse_fortis.py  pyproject.toml  script.py  test.py
data_uploader/: __init__.py  get_accessions.py  model_interface.py
data_uploader/cloud/: web_transport.py
data_uploader/utils/: example.py  utils.py
data_uploader_dev/: README.md  dcm_to_j2k_and_json.ipynb  pylintrc  pyproject.toml  pytest.ini  versioneer.py
data_uploader_dev/data_uploader/: _version.py  get_results.py  model_interface.py  upload_dcms.py
data_uploader_dev/data_uploader/cloud/: dicom_processor.py  request_signer.py  web_transport.py
data_uploader_dev/data_uploader/utils/: constants.py  example.py  utils.py
data_uploader_dev/scripts/: dcm_to_j2k_json.py  loop_uploads.sh
data_uploader_dev/tests/: test_dicom_processor.py  test_example.py
templates/: base_report.jinja  bones.jinja  cardiomediastinal.jinja  lung_parenchyma.jinja  other.jinja  pleural_space.jinja
tests/: __init__.py  conftest.py  test_model_interface.py  test_request_signer.py  test_utils.py
txt_report_gen/: parse_cxr_fortis.ipynb  parse_fortis.py
txt_report_gen/cxrjsons/: JPCLN001.json  JPCLN003.json  JPCLN005.json  JPCLN007.json  JPCLN009.json  JPCLN010.json  JPCLN011.json  JPCLN012.json  JPCLN014.json  JPCLN015.json  JPCLN016.json  JPCLN018.json  JPCLN019.json  JPCLN020.json  JPCLN021.json  JPCLN023.json  JPCLN024.json  JPCLN026.json  JPCLN027.json  JPCLN028.json  (+50 more)
(+6 files in other folders)
