[tool.poetry]
name = "data_uploader"
version = "0.1.0"
description = "Used to upload dicoms or pngs directly to the Annalise Backend"
authors = ["Mark Kerollos <mark.kerollos@annalise.ai>"]

[tool.poetry.dependencies]
python = "^3.8"
pydicom = "^2.3"
requests = "^2.28"
tqdm = "^4.64"
numpy = "^1.23"
Glymur = "^0.10"
aiohttp = "^3.8"
pandas = "^1.4"
shortuuid = "^1.0"
pylibjpeg-libjpeg = "^1.3"
pylibjpeg = "^1.4"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.2"
pytest = "^6.2.4"
mock = "^4.0.3"
pytest-cov = "^2.12.1"
black = "^22.6"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
skip-string-normalization = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
